# staas

./: .dockerignore  .editorconfig  .flake8  LICENSE  dockerfile  pyproject.toml
staas/: logger.py  main.py  settings.py  super.py
