[tool.poetry]
name = "staas"
version = "0.1.0"
description = "A auth service that work with supertokens"
authors = ["Mohamed-Kaizen <m.n.kaizen@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "staas"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
orjson = "^3.8.5"
loguru = "^0.6.0"
supertokens-python = "^0.11.13"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
darglint = "^1.8.1"
flake8 = "^6.0.0"
flake8-annotations = "^3.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.1.20"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.2"
isort = "^5.11.4"
radon = "^5.1.0"
mypy = "^0.991"

[tool.isort]
profile="black"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
